# logsense

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  Makefile  celery.sh  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  base_job.py  bootstrap.py  celery_app.py  config.py  database.py  logging.py  registry.py
app/core/constants/: runtime.py
app/core/exceptions/: __init__.py  base.py  domain.py  http.py
app/core/messages/: __init__.py  base.py  builder.py
app/core/middleware/: __init__.py  auth.py  error_handler.py  logging.py  request_id.py
app/core/responses/: __init__.py  base.py  errors.py
app/modules/: __init__.py
app/modules/actions/: api.py  jobs.py  messages.py  module.py  repository.py  schemas.py  services.py
app/modules/ai/: jobs.py  messages.py  module.py  schemas.py  services.py
app/modules/alerts/: interfaces.py  module.py
app/modules/analysis/: jobs.py  messages.py  module.py  schemas.py  services.py
app/modules/auth/: __init__.py  api.py  jobs.py  messages.py  module.py  (+2 more)
app/utils/: context.py
tests/: __init__.py  conftest.py
tests/core/: test_base_job.py  test_bootstrap_database.py  test_config.py  test_registry.py  test_responses_and_exceptions.py
tests/integration/: test_log_pipeline.py
tests/middleware/: test_middlewares.py
tests/modules/: test_actions_module.py  test_ai_module.py  test_alerts_module.py  test_analysis_module.py  test_auth_module.py  test_email_module.py  test_health_module.py  test_incident_module.py  test_logs_module.py  test_system_module.py
(+38 files in other folders)
